add measures on zones
header, cards, quote, etc

--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
   	  <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-  	<div class='header'> Header
+  	<div class='header'>
+  		<div class='top-line'>
+  			<div class='logo'>
+  				LOGO
+  			</div>
+  			<ul class='links'>
+  				<li>1st link</li>
+  				<li>2nd link</li>
+  				<li>3rd link</li>
+  			</ul>
+
+
+
+  		</div>
+
   	</div>
   	<div class='cards'> cardpool
   	</div>
