added structure to header
-temporary content and structure of header
-upadated measures. fixed px for all parts, and made them bigger.

--- a/index.html
+++ b/index.html
@@ -17,12 +17,21 @@
   				<li>2nd link</li>
   				<li>3rd link</li>
   			</ul>
-
-
-
   		</div>
-
+  		<div class='info'>
+  				<dev class='left-part'>
+  					<dev class='title'>Big Text</dev>
+  					<dev class='text'>some incridable text here, that ask you to sign in</dev>
+  					<button class='button'>Button</button>
+  				</dev>
+  				<dev class='right-part'>
+  					Nice image here
+  				</dev>
+  		</div>
+  		
   	</div>
+
+  	
   	<div class='cards'> cardpool
   	</div>
   	<div class='quote'> some quote
