added structure for cards

--- a/index.html
+++ b/index.html
@@ -27,12 +27,35 @@
   				<dev class='right-part'>
   					Nice image here
   				</dev>
+  		</div>		
+  	</div> 	
+  	<div class='cards'> 
+  		<div class='subheader'>
+  			Just look at thoose marvelous pics!
   		</div>
-  		
-  	</div>
+  		<div class='content'>
+  			<div class='card'>
+  				<div class='pic'>
+  				</div>
+  				<div class='text'> amazing! </div>
+  			</div>
+  			<div class='card'>
+  				<div class='pic'>
+  				</div>
+  				<div class='text'> amazing! </div>
+  			</div>
+  			<div class='card'>
+  				<div class='pic'>
+  				</div>
+  				<div class='text'> amazing! </div>
+  			</div>
+  			<div class='card'>
+  				<div class='pic'>
+  				</div>
+  				<div class='text'> amazing! </div>
+  			</div>
+  		</div>
 
-  	
-  	<div class='cards'> cardpool
   	</div>
   	<div class='quote'> some quote
   	</div>
