added structure for quote part

--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
   				<div class='text'> amazing! </div>
   			</div>
   		</div>
-
   	</div>
-  	<div class='quote'> some quote
+  	<div class='quote'> 
+  		<div class='content'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean venenatis erat lacus, vitae consectetur dolor porttitor aliquet. Duis a mauris non ex dignissim pretium. Phasellus ut elit sed sem fringilla.
+  		</div>
+  		<div class='author'> -Albert Einstein</div>
   	</div>
   	<div class='signup'> sign up
   	</div>
