added structure to sign up part

--- a/index.html
+++ b/index.html
@@ -61,7 +61,18 @@
   		</div>
   		<div class='author'> -Albert Einstein</div>
   	</div>
-  	<div class='signup'> sign up
+  	<div class='signup'> 
+  		<div class='msg-box'>
+  			<div class='content'>
+  				<div class='subheader'>
+  					Right now! Do it!
+  				</div>
+  				<div class='text'>
+  					Sign up for our product and get full acess to our increadable stuff!
+  				</div>
+  			</div>
+  			<button class='signup-button'>Sign Up!</button>
+  		</div>
   	</div>
   	<div class='footer'>
   		footer
