added content to page
- ./pictures added
- rounded corners
- header texts  small changes
- title of card section change
- company logo

--- a/index.html
+++ b/index.html
@@ -9,49 +9,41 @@
   <body>
   	<div class='header'>
   		<div class='top-line'>
-  			<div class='logo'>
-  				LOGO
-  			</div>
+  			<img class='logo' src='./pictures/logo.jpg' alt='dfh robotics logo'>
   			<ul class='links'>
-  				<li>1st link</li>
-  				<li>2nd link</li>
-  				<li>3rd link</li>
+  				<li><a href = '#'>1st link</a></li>
+  				<li><a href = '#'>2nd link</a></li>
+  				<li><a href = '#'>3rd link</a></li>
   			</ul>
   		</div>
   		<div class='info'>
   				<dev class='left-part'>
-  					<dev class='title'>Big Text</dev>
-  					<dev class='text'>some incridable text here, that ask you to sign in</dev>
-  					<button class='button'>Button</button>
+  					<dev class='title'>The Future is Here! </dev>
+  					<dev class='text'>Join us right now, and get all benefits of our increadable products!</dev>
+  					<button class='button'>Sign up</button>
   				</dev>
-  				<dev class='right-part'>
-  					Nice image here
-  				</dev>
+  				<img class='right-part' src='./pictures/main_img.png' alt='two robots planting a tree'>
   		</div>		
   	</div> 	
   	<div class='cards'> 
   		<div class='subheader'>
-  			Just look at thoose marvelous pics!
+  			Find out how our products can infuence your life!
   		</div>
   		<div class='content'>
   			<div class='card'>
-  				<div class='pic'>
-  				</div>
+  				<img class='pic' src='./pictures/img1.png' alt='robo hand over pizza'>
   				<div class='text'> amazing! </div>
   			</div>
   			<div class='card'>
-  				<div class='pic'>
-  				</div>
+  				<img class='pic' src='./pictures/img2.png' alt='robot helping man on a street'>
   				<div class='text'> amazing! </div>
   			</div>
   			<div class='card'>
-  				<div class='pic'>
-  				</div>
+  				<img class='pic' src='./pictures/img3.png' alt='robo cats playing on lawn'>
   				<div class='text'> amazing! </div>
   			</div>
   			<div class='card'>
-  				<div class='pic'>
-  				</div>
+  				<img class='pic' src='./pictures/img4.png' alt='robot making presentation in office'>
   				<div class='text'> amazing! </div>
   			</div>
   		</div>
