added final content and style fixes
-made cards bigger
-updated quote text and card discriptione text size, font, color
-less margin l/r on top-line of header

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   		<div class='top-line'>
   			<img class='logo' src='./pictures/logo.jpg' alt='dfh robotics logo'>
   			<ul class='links'>
-  				<li><a href = '#'>1st link</a></li>
-  				<li><a href = '#'>2nd link</a></li>
-  				<li><a href = '#'>3rd link</a></li>
+  				<li><a href = '#'>Sign Up</a></li>
+  				<li><a href = '#'>Log In</a></li>
+  				<li><a href = '#'>About Us</a></li>
   			</ul>
   		</div>
   		<div class='info'>
@@ -32,26 +32,26 @@
   		<div class='content'>
   			<div class='card'>
   				<img class='pic' src='./pictures/img1.png' alt='robo hand over pizza'>
-  				<div class='text'> amazing! </div>
+  				<div class='text'> Enchance your cooking experiance with our augmentic solutions!  </div>
   			</div>
   			<div class='card'>
   				<img class='pic' src='./pictures/img2.png' alt='robot helping man on a street'>
-  				<div class='text'> amazing! </div>
+  				<div class='text'> Participate in our social assistance projects </div>
   			</div>
   			<div class='card'>
   				<img class='pic' src='./pictures/img3.png' alt='robo cats playing on lawn'>
-  				<div class='text'> amazing! </div>
+  				<div class='text'> Your pets will love our addaptive bionics program </div>
   			</div>
   			<div class='card'>
   				<img class='pic' src='./pictures/img4.png' alt='robot making presentation in office'>
-  				<div class='text'> amazing! </div>
+  				<div class='text'> Send-Robot-to-Work is a new service for remote workers </div>
   			</div>
   		</div>
   	</div>
   	<div class='quote'> 
-  		<div class='content'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean venenatis erat lacus, vitae consectetur dolor porttitor aliquet. Duis a mauris non ex dignissim pretium. Phasellus ut elit sed sem fringilla.
+  		<div class='content'>Robots have revolutionized modern life by providing numerous benefits such as increased productivity, improved efficiency, and enhanced safety. They can perform repetitive tasks, work in hazardous environments, and assist with complex operations, ultimately improving the quality of life for people.
   		</div>
-  		<div class='author'> -Albert Einstein</div>
+  		<div class='author'> -Elbert Ainstein</div>
   	</div>
   	<div class='signup'> 
   		<div class='msg-box'>
